Add raleway font

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Animal Cardom. Kingdom of cards" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;600&display=swap"
+      rel="stylesheet"
+    />
     <title>Animal Cardom</title>
   </head>
   <body>
